--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 
 
-    <title>React App</title>
+    <title>Wayfarer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
